--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Android 13+ needs this one -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
