--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,14 +22,16 @@
         android:maxSdkVersion="32" />
 
     <application
-        android:allowBackup="true"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:name=".SyncApplication" android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.I230535">
+        android:theme="@style/Theme.I230535"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
             android:name=".SelectFollowerActivity"
             android:exported="false" />
